[package]
name = "hoarder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indoc = "1.0.8"
log = "0.4.17"
pretty_env_logger = "0.4.0"
teloxide = "0.11.3"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
