[tool.poetry]
name = "hoarder"
version = "1.0.0"
description = "A bot that allows users to send stuff to sell"
authors = ["megahomyak <g.megahomyak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.23.1"
Markdown = "^3.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
